--- a/app/Page/App/_App.scss
+++ b/app/Page/App/_App.scss
@@ -24,3 +24,32 @@
 		}
 	}
 }
+.signRecord{
+	top:pxToRem(390);
+	position:absolute;
+	bottom:0;
+	width:100%;
+}
+.nodata{
+	color:#999;
+	text-align:center;
+	position:absolute;
+	top:pxToRem(300);
+	width:100%;
+}
+.mapicon{
+	color:#fa565a;
+	font-size:22px;
+}
+.orgInfo{
+	background-color:$whiteColor;
+	font-size:$fontSize2;
+	line-height:pxToRem(90);
+	.orgList{
+		position:absolute;
+		z-index:1;
+		background-color:$whiteColor;
+		width:100%;
+		padding:0 pxToRem(30);
+	}
+}
