--- a/app/Page/App/_App.scss
+++ b/app/Page/App/_App.scss
@@ -62,13 +62,14 @@
 }
 .mapicon{
 	color:$focusColor;
-	font-size:44px;
+	font-size:22px;
 }
 .orgInfo{
 	background-color:$whiteColor;
 	/* font-size:$fontSize2 !important; */
 	@extend .fontSize2;
 	line-height:pxToRem(90);
+	height:pxToRem(90);
 	position:relative;
 	z-index:3;
 	.focusorg{
@@ -121,6 +122,7 @@
 	background:$whiteColor;
 	padding-left:pxToRem(28);
 	color:$fontColorGray;
+	@include height-dpr(14px);
 	&.onlyOne{
 		padding-top:pxToRem(20);
 	}
