--- a/app/Page/SelectArea/_SelectArea.scss
+++ b/app/Page/SelectArea/_SelectArea.scss
@@ -13,6 +13,7 @@
 	width:100%;
 	height:100%;
 	background-color: $whiteColor;
+    -webkit-overflow-scrolling: touch;
 }
 .amap_lib_placeSearch_page,.amap_lib_placeSearch_poi{display:none !important;}
 .amap-marker,.amap_lib_placeSearch_page,.poi-more,.poi-tel,.amap-overlays,.locs-list-container .amap_lib_placeSearch_poi{
@@ -112,5 +113,6 @@ display: block !important;
 		display:block;
 		z-index:33;
 		line-height:1;
+		overflow:hidden;
 	}
 }
