--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -29,6 +29,16 @@ $fontFamily:'Microsoft Yahei', 'Hiragino Sans GB', Helvetica;
     }
 }
 
+@mixin height-dpr($px){
+	height:$px;
+    [data-dpr="2"] & {
+        height: $px * 2;
+    }
+
+    [data-dpr="3"] & {
+        height: $px * 3;
+    }
+}
 $fontSize1:/*12px*2;*/pxToRem(26);
 $fontSize2:/*14px*2*/pxToRem(28);
 $fontSize3:/*16px*2*/pxToRem(32);
