--- a/app/Page/Fieldsign/_FieldSign.scss
+++ b/app/Page/Fieldsign/_FieldSign.scss
@@ -100,5 +100,12 @@
 			top:0;
 			background:rgba(0,0,0,.7);
 		}
+		i{
+			position:absolute;
+			right:0;
+			top:0;
+			color:#ff6d70;
+			font-size:pxToRem(46);
+		}
 	}
 }
