--- a/app/Page/Record/_Record.scss
+++ b/app/Page/Record/_Record.scss
@@ -251,15 +251,15 @@ outline:none;
 }
 
 .recordList{
-  height:100%;
   background-color:$whiteColor;
+  margin-top:pxToRem(35);
   .tabContainer{
     margin-top:pxToRem(35);
     background-color:$whiteColor;
   }
   .nodata{
-    top:12rem;
-  }
+    top:pxToRem(60);
+  }/* 
   .space{
     line-height:pxToRem(35);
     background-color:#f2f2f2;
@@ -268,15 +268,14 @@ outline:none;
     &.space2{
       margin-top:pxToRem(102);
     }
-  }
+  } */
   .tabTitle{
-    margin-bottom:pxToRem(30);
     .tab{
       display:inline-block;
       width:50%;
       text-align:center;
       color:#909090;
-      padding-bottom:pxToRem(20);
+      padding:pxToRem(20) 0;
       border-bottom:6px solid #fff;
       &.focus{
         color:$focusColor;
@@ -289,20 +288,19 @@ outline:none;
   }
 }
 .topContainer{
-  float:left;
+  /* float:left; */
   width:100%;
   border-bottom:1px solid #cecece;
-  position:fixed;
   top:0;
 }
   .mylist{
+    background-color:$whiteColor;
     overflow: auto;
-    margin-top:pxToRem(15);
-    position: absolute;
     bottom: 0;
-    top: pxToRem(654+60+35+25);
+    padding-top:pxToRem(14);
+    position:absolute;
+    top:700px;
     &.mylist2{
-      top: pxToRem(102+60+35+25);
     }
     width: 100%;
     .item:last-child .desc{
