'重新定位地图'

--- a/app/Page/Record/_Record.scss
+++ b/app/Page/Record/_Record.scss
@@ -296,6 +296,7 @@ outline:none;
   .mylist{
     background-color:$whiteColor;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
     bottom: 0;
     padding-top:pxToRem(14);
     position:absolute;
