--- a/app/Page/App/_App.scss
+++ b/app/Page/App/_App.scss
@@ -4,6 +4,9 @@
 	position:fixed;
 	width:100%;
 	z-index:2;
+	.box {
+		padding-top:pxToRem(38);
+	}
 }
 .mapContainer{
 	border:1px solid #cecece;
@@ -27,16 +30,23 @@
 		/* font-size:$fontSize1; */
 		@extend .fontSize1;
 		padding-top:pxToRem(20);
-		width:pxToRem(425);
+		width:pxToRem(400);
+		line-height:1;
 		h2{
 			color:$fontColorBlack;
 			@extend .fontSize2;
-			margin-bottom:pxToRem(15);
+			margin-bottom:pxToRem(12);
 			@extend %overText;
 		}
 		p{
 			color:$fontColorGray;
 			line-height:1.6;
+			@extend .fontSize;
+		}
+		i{
+			@extend .fontSize1;
+			color:#ccc;
+			margin-top:pxToRem(16);
 		}
 	}
 	.replay{
@@ -71,8 +81,8 @@
 	background-color:$whiteColor;
 	/* font-size:$fontSize2 !important; */
 	@extend .fontSize2;
-	line-height:pxToRem(90);
-	height:pxToRem(90);
+	line-height:pxToRem(85);
+	height:pxToRem(85);
 	position:relative;
 	z-index:3;
 	.focusorg{
@@ -135,6 +145,7 @@
 	overflow:auto;
 	background-color:$whiteColor;
 	margin-left:pxToRem(30);
+	line-height: 1;
 	.item{
 		&.error{
 			color:#fa565a;
@@ -144,7 +155,7 @@
 				color:#fa565a;
 				i{
 					color:#fa565a;
-					vertical-align: -3px;
+					/* vertical-align: -3px; */
 				}
 			}
 		}
@@ -178,13 +189,13 @@
 		}
 		.position{
 			/* font-size:$fontSize1; */
-			@extend .fontSize1;
+			@extend .fontSize;
 			margin:pxToRem(20) 0 0 0;
 			color:#928989;
 			i{
 				font-size:pxToRem(32);
 				color:#b4b4b4;
-				margin-right:pxToRem(12);
+				margin-right:pxToRem(8);
 				vertical-align: middle;
 			}
 		}
@@ -193,7 +204,7 @@
 			width:pxToRem(500); 
 			word-break: break-all;
 			/* font-size:$fontSize1; */
-			@extend .fontSize1;
+			@extend .fontSize15;
 			color:#544b4b;
 			line-height:1.5;
 
@@ -205,6 +216,7 @@
 	bottom:0;
 	width:100%;
 	text-align:center;
+	white-space: nowrap;
 	&.bigButton{
 		background: -webkit-linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1)); /* Safari 5.1 - 6.0 */
 		background: -o-linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1)); /* Opera 11.1 - 12.0 */
@@ -220,7 +232,8 @@
 	}
 	.button{
 		display:inline-block;
-		margin:0 pxToRem(90);
+		/* margin:0 pxToRem(80); */
+		width:48%;
 		p{
 			line-height:pxToRem(65);
 			color:#282828;
@@ -233,6 +246,7 @@
 			border-radius:pxToRem(80);
 			color:#fff;
 			font-size:pxToRem(60);
+			margin:0 auto;
 		}
 		&.lbutton a{
 			background-color:$color-left-button;
@@ -248,8 +262,9 @@
 		}
 	}
 	&.smbutton {
-		width:55%;
+		width:50%;
 		margin-bottom:pxToRem(280);
+		white-space: nowrap;
 		.button{
 			margin:0 0 0 pxToRem(40);
 			a{
@@ -259,6 +274,7 @@
 				/* font-size:$fontSize2; */
 				@extend .fontSize2;
 				font-family:$fontFamily;
+				margin:0;
 			}
 		}
 	}
